docs/api/graphql/v1/operations/mutations/update-project.mdx
---
pagination_next: null
pagination_prev: null
hide_table_of_contents: true
id: update-project
title: updateProject
---




export const Bullet = () => <><span style={{ fontWeight: 'normal', fontSize: '.5em', color: 'var(--ifm-color-secondary-darkest)' }}>&nbsp;●&nbsp;</span></>

export const SpecifiedBy = (props) => <>Specification<a className="link" style={{ fontSize:'1.5em', paddingLeft:'4px' }} target="_blank" href={props.url} title={'Specified by ' + props.url}>⎘</a></>

export const Badge = (props) => <><span className={props.class}>{props.text}</span></>

import { useState } from 'react';

export const Details = ({ dataOpen, dataClose, children, startOpen = false }) => {
  const [open, setOpen] = useState(startOpen);
  return (
    <details {...(open ? { open: true } : {})} className="details" style={{ border:'none', boxShadow:'none', background:'var(--ifm-background-color)' }}>
      <summary
        onClick={(e) => {
          e.preventDefault();
          setOpen((open) => !open);
        }}
        style={{ listStyle:'none' }}
      >
      {open ? dataOpen : dataClose}
      </summary>
      {open && children}
    </details>
  );
};




<Badge class="badge badge--secondary badge--primary" text="form schema"/>



Update a project's mutable fields (name, description, tags).




```graphql
updateProject(
  organizationId: ID!
  id: ID!
  input: UpdateProjectInput!
): ProjectPayload
```





### Form Schema

This mutation supports dynamic form generation using JSON Schema.

- [JSON Schema](https://api.massdriver.cloud/graphql/v1/inputs/updateProject.json)
- [UI Schema](https://api.massdriver.cloud/graphql/v1/inputs/updateProject.ui.json)

<SchemaForm
  schemaUrl="https://api.massdriver.cloud/graphql/v1/inputs/updateProject.json"
  uiSchemaUrl="https://api.massdriver.cloud/graphql/v1/inputs/updateProject.ui.json"
  name="updateProject"
/>

### Arguments

#### [<code style={{ fontWeight: 'normal' }}>updateProject.<b>organizationId</b></code>](#organization-id)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v1/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#organization-id\} 
Your organization's unique identifier.


#### [<code style={{ fontWeight: 'normal' }}>updateProject.<b>id</b></code>](#id)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>ID!</b></code>](/api/graphql/v1/types/scalars/id.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="scalar"/> \{#id\} 
The identifier of the project to update.


#### [<code style={{ fontWeight: 'normal' }}>updateProject.<b>input</b></code>](#input)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>UpdateProjectInput!</b></code>](/api/graphql/v1/types/inputs/update-project-input.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="input"/> \{#input\} 
Update an existing project's name and description. The ID cannot be changed after creation.


### Type

#### [<code style={{ fontWeight: 'normal' }}><b>ProjectPayload</b></code>](/api/graphql/v1/types/objects/project-payload.mdx) <Badge class="badge badge--secondary " text="object"/>